// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import.py 1`] = `
import sys

from models import X

from .models import X

from .models import B as C

from .example import *

from ..example import *

from .. import X

import long_module_name_1, long_module_name_2, long_module_name_3, long_module_name_4

from some_module import long_function_name_1, long_function_name_2, long_function_name_3

import \\
    some_module

from some_module import (
    some_module,
)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import sys

from models import X

from .models import X

from .models import B as C

from .example import *

from ..example import *

from .. import X

import \\
    long_module_name_1, \\
    long_module_name_2, \\
    long_module_name_3, \\
    long_module_name_4

from some_module import (
    long_function_name_1,
    long_function_name_2,
    long_function_name_3
)

import some_module

from some_module import some_module

`;

exports[`import.py 2`] = `
import sys

from models import X

from .models import X

from .models import B as C

from .example import *

from ..example import *

from .. import X

import long_module_name_1, long_module_name_2, long_module_name_3, long_module_name_4

from some_module import long_function_name_1, long_function_name_2, long_function_name_3

import \\
    some_module

from some_module import (
    some_module,
)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import sys

from models import X

from .models import X

from .models import B as C

from .example import *

from ..example import *

from .. import X

import \\
    long_module_name_1, \\
    long_module_name_2, \\
    long_module_name_3, \\
    long_module_name_4

from some_module import (
    long_function_name_1,
    long_function_name_2,
    long_function_name_3,
)

import some_module

from some_module import some_module

`;

exports[`import.py 3`] = `
import sys

from models import X

from .models import X

from .models import B as C

from .example import *

from ..example import *

from .. import X

import long_module_name_1, long_module_name_2, long_module_name_3, long_module_name_4

from some_module import long_function_name_1, long_function_name_2, long_function_name_3

import \\
    some_module

from some_module import (
    some_module,
)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import sys

from models import X

from .models import X

from .models import B as C

from .example import *

from ..example import *

from .. import X

import \\
    long_module_name_1, \\
    long_module_name_2, \\
    long_module_name_3, \\
    long_module_name_4

from some_module import (
    long_function_name_1,
    long_function_name_2,
    long_function_name_3
)

import some_module

from some_module import some_module

`;
